--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="renderer" content="webkit">
+  <meta http-equiv="pragma" content="no-cache">
+  <meta http-equiv="cache-control" content="no-cache">
+  <meta http-equiv="expires" content="0">
   <title>AngularJS-ES6</title>
 </head>
-
+dddd
 <body ng-app="app">
 <app>loading</app>
 </body>
